# task-explorer

./: .gitignore  Cargo.toml  README.md  build.rs
.stakpak/data/: local.db
locales/: en.json  pl.json  ru.json
src/: app.rs  config.rs  lang.rs  main.rs  startup.rs  system.rs  theme.rs
src/components/: chart.rs  mod.rs  progress_bar.rs  sidebar.rs  stat_card.rs
src/views/: anomalies.rs  cpu.rs  details.rs  disks.rs  mod.rs  network.rs  overview.rs  process_info.rs  processes.rs  ram.rs  settings.rs  startup.rs  system_info.rs
