[package]
name = "task_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "image"] }
 tokio = { version = "1.39", features = ["time"] }
iced_futures = "0.4"
sysinfo = "0.33"
chrono = "0.4"
plotters = { version = "0.3", default-features = false, features = ["line_series", "area_series"] }
plotters-iced = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"

[build-dependencies]
winres = "0.1"
image = "0.24"
